criação da primeira rota e controller; adicionando o módulo express-load

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Contatooh</title>
+        <title><%=nomeApp%></title>
     </head>
     <body>
-        <h1>Carácules, te amo pra chuchu!</h1>
+        <h1>Bem-vindo ao <%=nomeApp%></h1>
     </body>
 </html>
